# unicorns

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
tests/: test_library.py
unicorns/: library.py
unicorns/builds/score/: back-cover.tex  front-cover.tex  music.ly  preface.tex  score.tex
unicorns/builds/score/_sections/: a.ily  b.ily  c.ily
unicorns/etc/: ideas.md
unicorns/segments/a/: __metadata__.json  music.ily  music.ly  music.py
unicorns/segments/b/: __metadata__.json  music.ily  music.py
unicorns/segments/c/: __metadata__.json  music.ily  music.py
unicorns/stylesheets/: stylesheet.ily
