[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicorns"
version = "24.6b0"
authors = [
    { name="Tsz Kiu Pang", email="osamupang@gmail.com" },
]
description = "The Last Unicorns, for solo piano"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abjad",
    "abjad-ext-nauert",
    "pang",
    "numpy >= 1.26.0, < 2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["unicorns"]
